--- a/package.json
+++ b/package.json
@@ -1,41 +1,43 @@
 {
-    "name": "node-cms",
-    "version": "1.0.0",
-    "description": "CMS system powered by node.",
-    "main": "app.js",
-    "scripts": {
-        "server-dev": "cross-env NODE_ENV=develop supervisor -i public app.js",
-        "server-prod": "cross-env NODE_ENV=production forever app.js",
-        "build": "cross-env NODE_ENV=production webpack --config webpack.prod.js"
-    },
-    "author": "liyifei",
-    "license": "ISC",
-    "dependencies": {
-        "express": "^4.15.2",
-        "body-parser": "^1.17.1",
-        "md5": "^2.2.1",
-        "multer": "^1.3.0",
-        "mysql": "^2.13.0",
-        "vue": "^2.3.3"
-    },
-    "devDependencies": {
-        "browser-sync": "^2.18.12",
-        "chunk-manifest-webpack-plugin": "^1.1.0",
-        "clean-webpack-plugin": "^0.1.16",
-        "cross-env": "^5.0.0",
-        "css-loader": "^0.28.2",
-        "extract-text-webpack-plugin": "^2.1.0",
-        "file-loader": "^0.11.1",
-        "html-loader": "^0.4.5",
-        "html-webpack-plugin": "^2.28.0",
-        "html-withimg-loader": "^0.1.16",
-        "inline-manifest-webpack-plugin": "^3.0.1",
-        "reload": "^1.1.5",
-        "style-loader": "^0.18.0",
-        "uglifyjs-webpack-plugin": "^0.4.3",
-        "url-loader": "^0.5.8",
-        "webpack": "^2.6.0",
-        "webpack-dev-middleware": "^1.10.2",
-        "webpack-hot-middleware": "^2.18.0"
-    }
+  "name": "node-cms",
+  "version": "1.0.0",
+  "description": "CMS system powered by node.",
+  "main": "app.js",
+  "scripts": {
+    "server-dev": "cross-env NODE_ENV=develop supervisor -i public app.js",
+    "server-prod": "cross-env NODE_ENV=production forever app.js",
+    "build": "cross-env NODE_ENV=production webpack --config webpack.prod.js"
+  },
+  "author": "liyifei",
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.15.2",
+    "body-parser": "^1.17.1",
+    "md5": "^2.2.1",
+    "multer": "^1.3.0",
+    "mysql": "^2.13.0",
+    "vue": "^2.3.3"
+  },
+  "devDependencies": {
+    "browser-sync": "^2.18.12",
+    "chunk-manifest-webpack-plugin": "^1.1.0",
+    "clean-webpack-plugin": "^0.1.16",
+    "cross-env": "^5.0.0",
+    "css-loader": "^0.28.2",
+    "eslint": "^3.19.0",
+    "eslint-loader": "^1.7.1",
+    "extract-text-webpack-plugin": "^2.1.0",
+    "file-loader": "^0.11.1",
+    "html-loader": "^0.4.5",
+    "html-webpack-plugin": "^2.28.0",
+    "html-withimg-loader": "^0.1.16",
+    "inline-manifest-webpack-plugin": "^3.0.1",
+    "reload": "^1.1.5",
+    "style-loader": "^0.18.0",
+    "uglifyjs-webpack-plugin": "^0.4.3",
+    "url-loader": "^0.5.8",
+    "webpack": "^2.6.0",
+    "webpack-dev-middleware": "^1.10.2",
+    "webpack-hot-middleware": "^2.18.0"
+  }
 }
